# arcv1

./: .gitignore  main.py  pyproject.toml  requirements.txt
agents/: manager.py
agents/base/: agent.py  context.py  executor.py  lifecycle.py  message.py  messenger.py  state.py  task.py
config/: default.json
core/: config.py  events.py  exceptions.py  kernel.py  logger.py  registry.py  runtime.py
scripts/: test_agent.py  test_agent_manager.py  test_arcv1.py  test_config.py  test_context.py  test_events.py  test_exceptions.py  test_kernel.py  test_lifecycle.py  test_logger.py  test_message.py  test_registry.py  test_runtime.py  test_state.py  test_task.py
