[project]
name = "arcv1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.2",
    "gitpython>=3.1.53",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "orjson>=3.11.9",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.13.3",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
    "watchdog>=6.0.0",
]
